# EpiSim.jl

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_SYNTHETIC_GEN.md  Dockerfile  EPISIM.JL.CONTEXT.md  EPISIM_NUMERICAL_STABILITY.md  MMCA_mobility_configuration.md  Manifest.toml  NPI_PARAMETERS.md  Project.toml  README.md  SYNTHETIC_DATA_CONTEXT.md  analyze_interventions.py  install.jl  install.sh  intervention_analysis.csv  syncto_mn5.sh  test_distributed_batch.sh  verify_docker.sh
.github/workflows/: ci.yml  docker-publish.yml  main.yml
examples/: README.md  config_external_mobility_invalid.json  config_external_mobility_valid.json  mobility_time_varying_example.nc
hpc/: sbatch_single_node.sh
models/catalonia/: A0_initial_conditions_seeds.csv  catalonia_dataset_summary.json  config_MMCACovid19.json  metapopulation_data.csv  rosetta.csv
models/mitma/: A0_initial_conditions_seeds_edar159.csv  R_mobility_matrix_edar159.csv  config_MMCACovid19-vac.json  config_MMCACovid19.json  config_MMCACovid19_edar159.json  edar_to_metapop_mapping.json  metapopulation_data_edar159.csv  (+1 more)
python/: CLAUDE.md  README.md  add_cases_vars_to_zarr.py  analyze_synthetic.py  append_mobility_to_zarr.py  build_edar_metapop_mapping.py  check_test_baseline.py  compare_mobility_artifacts.py  convert_mobility_to_zarr.py  downsample_zarr.py  episim_schema.json  episim_schema_template.json  failed_profiles_logger.py  generate_edar159_initial_conditions.py  generate_mobility_example.py  growth_rate_detector.py  plot_synthetic_results.py  plot_zarr_epicurves.py  process_synthetic_outputs.py  pyproject.toml  requirements.txt  run_synthetic_pipeline.py  setup.py  spike_detector.py  synthetic_generator.py  synthetic_observations.py  test_check_csv.py  test_config.py  test_debug.py  test_exact_configs.py  test_exact_configs2.py  test_exact_configs3.py  test_json_mode.py  test_json_mode2.py  test_kappa_sweep.py  test_tc.py  test_verify_kappa.py  transform_catalonia_data.py  verify_zarr_health.py
python/data/: municipality_id_reference.csv
python/episim_python/: __init__.py  epi_sim.py  episim_utils.py  mobility.py  mobility_vectorized.py  schema_validator.py
python/episim_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/examples/: README.md  basic_simulation.py  config_validation.py  parameter_sensitivity.py  step_by_step_simulation.py
python/tests/: __init__.py  benchmark_mobility.py  conftest.py  test_biomarker_generation.py  test_compare_mobility_artifacts.py  test_configuration.py  test_edar_biomarker_generation.py  test_episim.py  test_episim_config.py  test_errors.py  test_growth_rate_detector.py  test_helpers.py  test_integration.py  test_iterative_pipeline.py  test_kappa_configurations.py  test_marker_file_behavior.py  test_metapopulation.py  test_mobility_generator.py  test_mobility_validation.py  test_process_synthetic_outputs.py  test_run_synthetic_pipeline.py  test_schema_validation.py  test_sparsity_tiers.py  test_spike_detector.py  test_synthetic_generator.py  test_synthetic_mobility.py  test_time_varying_mobility.py  test_utils.py
python/tests/fixtures/: mini_edar_muni_edges.nc  test_config.json  test_metapopulation.csv  test_rosetta.csv
src/: EpiSim.jl  batch_run.jl  commands.jl  common.jl  engine.jl  io.jl  run.jl
test/: runtests.jl
(+10 files in other folders)
