[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episim-python"
version = "0.1.1"
authors = [
    {name = "EpiSim Development Team", email = "miguel.ponce@bsc.es"},
]
description = "Python interface for EpiSim.jl epidemic simulation package"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "xarray>=0.16.0",
    "netcdf4>=1.5.0",
    "jsonschema>=3.2.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/Epi-Sim/EpiSim.jl"
Repository = "https://github.com/Epi-Sim/EpiSim.jl"
Issues = "https://github.com/Epi-Sim/EpiSim.jl/issues"
Documentation = "https://github.com/Epi-Sim/EpiSim.jl/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["episim_python*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "ICN", "PIE", "PYI", "SIM", "UP", "RUF"]
ignore = ["E501", "E741", "B904", "B008", "UP007", "RUF001", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
